# scitrail

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-docs.yml  publish-pypi.yml  run-tests.yml
docs/src/: conf.py  examples.md  python-api.md
docs/src/examples/: cu_anschutz_quantum.ipynb
examples/: cu_quantum.yaml  cu_quantum_report.md  cu_topics_all_departments.yaml  cu_topics_all_departments_report.md  cu_topics_dbmi.yaml  cu_topics_dbmi_report.md  cu_topics_quantum_bioinformatics.yaml  cu_topics_quantum_bioinformatics_report.md
src/notebooks/: example_notebook.ipynb  example_notebook.py
src/scitrail/: __init__.py  cli.py  config.py  disambiguation.py  main.py  models.py  openalex_client.py  pipeline.py  report.py  summarizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_main.py  test_openalex_client.py  test_pipeline.py  test_report.py  test_summarizer.py
